# hola_adios

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt  adios_raw_perfs.cpp  adios_raw_perfs2.cpp  adios_raw_perfs3.cpp  adios_raw_perfs4.cpp  bench_at_scale.sh  bench_at_scale_blue.sh  buffer_bench.py  chunk_size.py  mpiio_raw_perfs.cpp  simple_bench.py  simple_blue.py
src/: 0_hola_adios.cpp  10_report.cpp  11_omp_adios.cpp  12_omp_adios.cpp  1_hola_adios.cpp  2_hola_adios.cpp  3_hola_adios.cpp  4_hola_adios.cpp  4_omp_adios.cpp  5_hola_adios.cpp  6_hola_adios.cpp  7_gread_report.ch  7_gwrite_report.ch  7_report.cpp  8_report.cpp  9_report.cpp  CMakeLists.txt
xml/: 0_config.xml  3_config.xml  4_config.xml  7_report.xml
